--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "fastclick": "^1.0.6",
     "path": "^0.12.7",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "postcss-px-to-viewport": "^1.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
